--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "pagerduty-lambda-cdk",
+  "name": "pagerduty-lambda-cfn",
   "version": "0.1.0",
-  "bin": {
-    "pagerduty-lambda-cdk": "bin/pagerduty-lambda-cdk.js"
-  },
+  "workspaces": [
+    "cdk",
+    "handler"
+  ],
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk"
+    "build:handler": "npm run prebuild -w handler && npm run build -w handler && npm run postbuild -w handler",
+    "upload:handler": "npm run upload -w handler",
+    "build:cdk": "npm run build -w cdk",
+    "upload:cfn": "npm run upload -w cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "20.11.16",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
-    "aws-cdk": "2.128.0",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.3.3"
+    "@classmethod/eslint-config": "0.0.3",
+    "@classmethod/prettier-config": "0.0.3",
+    "@types/jest": "29.5.12",
+    "cspell": "8.8.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.128.0",
-    "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "esbuild": "0.21.4"
   }
 }
