--- a/handler/package.json
+++ b/handler/package.json
@@ -5,7 +5,9 @@
     "prebuild": "rm -rf dist",
     "build": "esbuild src/index.ts --bundle --minify --sourcemap --platform=node --target=es2020 --outfile=dist/index.js",
     "postbuild": "cd dist && zip -r index.zip index.js*",
-    "upload": "aws s3 cp ./dist/index.zip s3://quick-create-cfn-template/pagerduty-lambda-handler/index.zip"
+    "upload:ap-northeast-1": "aws s3 cp ./dist/index.zip s3://pagerduty-lambda-handler-ap-northeast-1/index.zip",
+    "upload:ap-northeast-3": "aws s3 cp ./dist/index.zip s3://pagerduty-lambda-handler-ap-northeast-3/index.zip",
+    "upload": "npm run upload:ap-northeast-1 && npm run upload:ap-northeast-3"
   },
   "dependencies": {
     "@types/aws-lambda": "8.10.138",
